some design added

--- a/index.html
+++ b/index.html
@@ -4,8 +4,79 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VivaSoft-It-Clone</title>
+    <!-- favicon -->
+    <link rel="icon" href="image/icon.jpg">
+    <!-- css link  -->
+    <link rel="stylesheet" href="style.css">
+    <!-- font-awesome link  -->
+    <script src="https://kit.fontawesome.com/195c64e442.js" crossorigin="anonymous"></script>
+    <!-- google font link  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header>
+        <!-- navbar section start  -->
+        <a href="#" class="logo"><img src="image/logo.jpg"></a>
+        <nav class="navbar">
+            <ul>
+                <li><a href="#">Services +</a>
+                <ul class="number-1">
+                    <li><a href="#">team augmentation</a></li>
+                    <li><a href="#">offshore office expansion</a></li>
+                    <li><a href="#">MVP Service</a></li>
+                    <li><a href="#">End to End Development</a></li>
+                </ul></li>
+                <li><a href="#">Academy +</a>
+                <ul class="number-2">
+                    <li><a href="#">python bootcamp</a></li>
+                    <li><a href="#">typescript bootcamp</a></li>
+                    <li><a href="#">git bootcamp</a></li>
+                    <li><a href="#">goLang bootcamp</a></li>
+                </ul></li>
+                <li><a href="#">Learnathon 2.0</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">English +</a></li>
+                <button class="primary-btn">Get Started</button>
+            </ul>
+            
+        </nav>
+        <!-- navbar section end -->
+    </header>
+    <main>
+        <!-- section 1 header banner start  -->
+        <section>
+            <div class="header-banner-item-container">
+                <div class="header-banner-items-text">
+                    <h6>Offshore Software Development </h6>
+                    <h1 class="primary-h1">We Deploy World Class Agile <br> Product Teams On Demand</h1>
+                    <p class="primary-p">Vivasoft specializes in providing custom software development services. Get premium software solutions from a reliable outsourcing partner and set your business apart. Skilled teams that can design, build, space and scale your vision in the most efficient way. </p>
+                    <div class="header-banner-items-numbers">
+                        <div>
+                        <h2>6+</h2>
+                        <p class="primary-p">Years Of Experience</p>
+                    </div>
+                        <div>
+                        <h2>180+</h2>
+                        <p class="primary-p">Dedicated Engineers</p>
+                    </div>
+                        <div>
+                        <h2>70+</h2>
+                        <p class="primary-p">Successful Project</p>
+                    </div>
+                    </div>
+                    <button class="primary-btn">Hire Developers</button>
+                </div>
+                <div class="header-banner-items-picture">
+                    <img src="image/background1.jpg" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- section 1 header banner end -->
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
