some section design added

--- a/index.html
+++ b/index.html
@@ -74,6 +74,42 @@
             </div>
         </section>
         <!-- section 1 header banner end -->
+        <!-- section 2 start  -->
+        <section class="section-2">
+            <div class="section-header">
+                <h1 class="primary-h1">How Vivasoft Works</h1>
+                <p class="primary-p">
+                    We follow agile methodology to deliver a high quality task to meet established deadline. A business can choose the software outsourcing business model that best matches their needs. We will help them augment their core competencies. 
+                </p>
+            </div>
+            <div class="section-2-item-container">
+                <div class="section-2-items-text">
+                    <img src="image/group1.jpg" alt="">
+                    <h4>Team Augmentation</h4>
+                    <p class="primary-p">Our team of expert software engineers provides additional support to your in-house team, ensuring a seamless collaboration and a boosted workflow. With our support, you can tackle even the most complex projects with confidence.</p>
+                    <h6>Know More <i class="fa-solid fa-arrow-right" style="color: #4A42EA;"></i></h6>
+                </div>
+                <div class="section-2-items-text">
+                    <img src="image/group2.jpg" alt="">
+                    <h4>Project Development</h4>
+                    <p class="primary-p">Our team of experts takes your ideas and transforms them into top-notch products through an efficient and cost-effective process. We aim to deliver products that are ready for user testing, ensuring a smooth and successful launch.</p>
+                    <h6>Estimate Project <i class="fa-solid fa-arrow-right" style="color: #4A42EA;"></i></h6>
+                </div>
+                <div class="section-2-items-text">
+                    <img src="image/group3.jpg" alt="">
+                    <h4> MVP Services </h4>
+                    <p class="primary-p">We are an experienced and MVP development company that will help you bring your product to life. Our end-to-end service covers the entire process, from ideation and design to delivery and ongoing support. </p>
+                    <h6>Know More <i class="fa-solid fa-arrow-right" style="color: #4A42EA;"></i></h6>
+                </div>
+                <div class="section-2-items-text">
+                    <img src="image/group4.jpg" alt="">
+                    <h4>Offshore Development</h4>
+                    <p class="primary-p">Wondering how to outsource software development to an offshore company? We built overseas team to work on your projects. acts as an extension of your in-house team and has the task of fast-tracking your projects. </p>
+                    <h6>Expand Office <i class="fa-solid fa-arrow-right" style="color: #4A42EA;"></i></h6>
+                </div>
+            </div>
+        </section>
+        <!-- section 2 end -->
     </main>
     <footer>
 
