section design add

--- a/index.html
+++ b/index.html
@@ -110,6 +110,61 @@
             </div>
         </section>
         <!-- section 2 end -->
+        <!-- section 3 start  -->
+        <section>
+            <div class="section-header">
+                <h1 class="primary-h1">Most Effective Software Development Outsourcing Service</h1>
+                <p class="primary-p">As your software development partner, we are committed to helping you establish long-term business relationships. We offer a variety of outsourcing services that can be tailored to your specific needs. Our team of experts has extensive experience in all aspects of software development, from enterprise applications to mobile apps and everything in between.</p>
+            </div>
+            <div class="section-3-item-container">
+                <div class="section-3-items-text">
+                    <img src="image/group5.jpg" alt="">
+                    <h4>Scalable System Design</h4>
+                    <p class="primary-p">High-performing product giving you a tailored solution for your business. </p>
+                </div>
+                <div class="section-3-items-text">
+                    <img src="image/group6.jpg" alt="">
+                    <h4>Cloud Services</h4>
+                    <p class="primary-p">Cloud outsourcing provider managed cloud services for businesses. </p>
+                </div>
+                <div class="section-3-items-text">
+                    <img src="image/group7.jpg" alt="">
+                    <h4>DevOps Services</h4>
+                    <p class="primary-p">DevOps consulting services based on modern tools & technologies. </p>
+                </div>
+                <div class="section-3-items-text">
+                    <img src="image/group8.jpg" alt="">
+                    <h4>Big Data & Data Science</h4>
+                    <p class="primary-p">Drive Business Transformation Through Data Analytics </p>
+                </div>
+                <div class="section-3-items-text">
+                    <img src="image/group9.jpg" alt="">
+                    <h4>Database Management</h4>
+                    <p class="primary-p">DBMS establish the relationship between datasets, and how users interact with them.  </p>
+                </div>
+                <div class="section-3-items-text">
+                    <img src="image/group10.jpg" alt="">
+                    <h4>Embedded System Design</h4>
+                    <p class="primary-p">Provide high-quality embedded system design and embedded architecture design services.</p>
+                </div>
+                <div class="section-3-items-text">
+                    <img src="image/group11.jpg" alt="">
+                    <h4>Mobile Application Dev</h4>
+                    <p class="primary-p">We Build Your Apps For All The Devices Out There</p>
+                </div>
+                <div class="section-3-items-text">
+                    <img src="image/group12.jpg" alt="">
+                    <h4>UX Design</h4>
+                    <p class="primary-p">UX design ensures the quality of user journey of your digital products and services.  </p>
+                </div>
+                <div class="section-3-items-text" id="last">
+                    <img src="image/group13.jpg" alt="">
+                    <h4>SQA</h4>
+                    <p class="primary-p">Software test lifecycle services; from test planning to execution and everything in between. </p>
+                </div>
+            </div>
+        </section>
+        <!-- section 3 end -->
     </main>
     <footer>
 
