some design added

--- a/index.html
+++ b/index.html
@@ -165,6 +165,40 @@
             </div>
         </section>
         <!-- section 3 end -->
+        <!-- section 4 start  -->
+        <section class="section-4">
+            <div class="section-header">
+                <h1 class="primary-h1">Our Custom Software Development Products For Partners</h1>
+                <p class="primary-p">Our company specializes in software outsourcing and provides robust, scalable, and efficient solutions to clients around the world. We are committed to providing quality services at competitive prices. Our goal is to help our clients achieve their business objectives by providing them with the best possible software solutions.</p>
+            </div>
+            <div class="section-4-item-container">
+                <div class="section-4-items-text">
+                    <img src="image/background2.png" alt="">
+                    <h5>Toja</h5>
+                    <p class="primary-p">Toja Connected Water is a smart water management system that allows users to monitor and control their water usage and consumption through a mobile app or website.</p>
+                    <h6>Explore Now <i class="fa-solid fa-arrow-right" style="color: #4A42EA;"></i></h6>
+                </div>
+                <div class="section-4-items-text">
+                    <img src="image/background3.png" alt="">
+                    <h5>Wellteam</h5>
+                    <p class="primary-p">A Software to Boost Mental and Physical Fitness. Make fitness a part of your activity. Use online tools to explore solutions that could unlock your path to a better life.</p>
+                    <h6>Explore Now <i class="fa-solid fa-arrow-right" style="color: #4A42EA;"></i></h6>
+                </div>
+                <div class="section-4-items-text">
+                    <img src="image/background4.png" alt="">
+                    <h5>Klikit</h5>
+                    <p class="primary-p">With klikit, restaurants can manage multiple food delivery companies from one single platform.</p>
+                    <h6>Explore Now <i class="fa-solid fa-arrow-right" style="color: #4A42EA;"></i></h6>
+                </div>
+                <div class="section-4-items-text">
+                    <img src="image/background5.png" alt="">
+                    <h5>MyCash</h5>
+                    <p class="primary-p">MyCash app is a virtual money based app where users can deposit and use their money whenever it’s needed. Full fledged mobile web app. </p>
+                    <h6>Explore Now <i class="fa-solid fa-arrow-right" style="color: #4A42EA;"></i></h6>
+                </div>
+            </div>
+        </section>
+        <!-- section 4 end -->
     </main>
     <footer>
 
