some design added

--- a/index.html
+++ b/index.html
@@ -199,6 +199,50 @@
             </div>
         </section>
         <!-- section 4 end -->
+        <!-- section 5 start  -->
+        <section>
+            <div class="section-header">
+                <h1 class="primary-h1">Technology We Used</h1>
+                <p class="primary-p">It has become a prerequisite for companies to develop custom software products to stay competitive. Vivasoft's technical expertise use the most popular technology for development outsourcing software. </p>
+            </div>
+            <div class="section-5-some-items-container">
+                <img src="image/background12.svg" alt="">
+                <h4>Using The Most Update Technology <p class="primary-p">Entrusting the new technology to the most advanced programmers will ensure a more robust and high-performing system.</p></h4>
+            </div>
+            <div class="section-5-items-container">
+                <div class="section-5-item-picture">
+                    <img src="image/go.png" class="section-5-img">
+                </div>
+                <div class="section-5-items-picture">
+                    <img src="image/flutter.png" class="section-5-img">
+                </div>
+                <div class="section-5-items-picture">
+                    <img src="image/aws.jpg" class="aws" class="section-5-img">
+                </div>
+                <div class="section-5-items-picture">
+                    <img src="image/dotnet.png" class="section-5-img">
+                </div>
+                <div class="section-5-items-picture">
+                    <img src="image/azure.png" class="section-5-img">
+                </div>
+                <div class="section-5-items-picture">
+                    <img src="image/python.png" class="section-5-img">
+                </div>
+                <div class="section-5-items-picture">
+                    <img src="image/angular.png" class="section-5-img">
+                </div>
+                <div class="section-5-items-picture">
+                    <img src="image/react.png" class="section-5-img">
+                </div>
+                <div class="section-5-items-picture">
+                    <img src="image/java.png" class="section-5-img">
+                </div>
+                <div class="section-5-items-picture">
+                    <img src="image/vue.png" class="section-5-img">
+                </div>
+            </div>
+        </section>
+        <!-- section 5 end -->
     </main>
     <footer>
 
