--- a/index.html
+++ b/index.html
@@ -243,6 +243,29 @@
             </div>
         </section>
         <!-- section 5 end -->
+        <!-- section 6 start  -->
+        <section class="section-6">
+            <div class="section-header">
+                <h1 class="primary-h1">Empowering Your Business with Our Innovative Software Solutions</h1>
+                <p class="primary-p">Our software products are the result of years of research and development, and they are built using the latest technologies and industry best practices. Whether you're looking to improve efficiency, streamline processes, or gain a competitive edge, our products have been developed to meet your specific needs.</p>
+            </div>
+            <div class="section-6-items-container">
+                <div class="section-6-item-text">
+                    <img src="" alt="">
+                    <h5>GPS Tracking System</h5>
+                    <p class="primary-p">Track your vehicle's real-time location, monitor fuel consumption and drivers' performance. Autonemo is the top GPS tracking & fleet management service.</p>
+                    <h6>Explore Now <i class="fa-solid fa-arrow-right" style="color: #4A42EA;"></i></h6>
+                </div>
+                <div class="section-6-item-text-picture">
+                    <img src="" alt="" class="img-2">
+                    <h5>HR Management System</h5>
+                    <p class="primary-p">Manage HR and payroll activities from a single software. Our HR software is used by more than 300 companies across the country. PiHR is the best HR software in Bangladesh.
+                    </p>
+                    <h6>Explore Now <i class="fa-solid fa-arrow-right" style="color: #4A42EA;"></i></h6>
+                </div>
+            </div>
+        </section>
+        <!-- section 6 end -->
     </main>
     <footer>
 
